<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">


        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/profile"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"

            />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:layout_below="@id/profileImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:layout_below="@id/nameTextView"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:enabled="false"/>

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPhone"
            android:inputType="phone"
            android:layout_below="@id/emailEditText"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:enabled="false"/>

        <EditText
            android:id="@+id/departmentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneEditText"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:hint="@string/department"
            android:inputType="textShortMessage" />

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/departmentEditText"
            android:layout_centerHorizontal="true"
            android:text="@string/TextEdit"
            android:backgroundTint="@color/green"
            android:onClick="editProfile" />
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>