<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="WELCOME"
        android:fontFamily="@font/augustus"
        android:textColor="@color/green"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--- Input about EmailBox -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxEmail"
        android:layout_width="331dp"
        android:layout_height="61dp"
        android:layout_marginTop="72dp"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/green"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <requestFocus />

    <!--- Input about PasswordBox -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxPassword"
        android:layout_width="331dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/green1"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:text="@string/Switch1"
        android:textSize="15sp"
        android:trackTint="#008080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxPassword"
        tools:checked="false" />

    <Button
        android:id="@+id/bottomLogin"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="40sp"
        app:layout_constraintTop_toBottomOf="@+id/boxPassword" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ForgotPass"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomLogin" />

    <TextView
        android:id="@+id/textplane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/textplane"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomLogin" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/signup"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPass" />


</androidx.constraintlayout.widget.ConstraintLayout>